Второе домашнее задание
1. Не понимаю как стилизовать поле ввода (почему-то не получается задать стиль элементу так что бы он соответствовал размеру картинки не был больше либо меньше, у меня получается так что даже при убранных отступах поля лейбл, всё равно поле становится не ровно и либо слишком маленкой высоты либо слишком сильно раздувает поле header)
2. Так же у меня не выходит корректный вид меню (если убрать комментарий вы увидите что происходит, почему-то появляется задний фон, у меня гдето в коде ошибка но я не могу понять где, причем если поменять button на div картинка становится нормальной, помогите разобраться пожалуйста)
3. Я заменил div изображения на ссылку теперь посетитель сайта может на нее перейти.  Так же я заменил некоторые элементы данного блока на подходящие например как спаны
4. Заменил декоративные изображения на инлайн свг

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -18,3 +18,14 @@
   .header__contact {
     margin-right: 33px;
   }
+
+  .header__items {
+    display: flex;
+    text-align: center;
+    align-items: center;
+  }
+
+  .menu__btn {
+  }
+
+
