--- a/css/_subscribe.scss
+++ b/css/_subscribe.scss
@@ -11,7 +11,7 @@
     text-align: center;
   }
   
-  .subscribe__block__left {
+  .subscribe__block_left {
     margin-top: 97px;
     width: 360px;
     height: 225px;
