--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ a {
 }
 
 .wrap {
-  width: 1140px;
+  width: 100%;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -92,6 +93,12 @@ a {
 
 .header__contact {
   margin-right: 33px;
+}
+
+.header__items {
+  display: flex;
+  text-align: center;
+  align-items: center;
 }
 
 .advantage {
@@ -146,7 +153,7 @@ a {
   text-align: center;
 }
 
-.subscribe__block__left {
+.subscribe__block_left {
   margin-top: 97px;
   width: 360px;
   height: 225px;
@@ -393,8 +400,15 @@ a {
   background-color: #F8F8F8;
   margin-bottom: 30px;
 }
+.product__pic {
+  margin-bottom: 25px;
+}
+.product .tittle__none {
+  font-size: 40;
+  display: none;
+  opacity: 0;
+}
 .product__title {
-  margin-top: 25px;
   margin-left: 17px;
   margin-right: 17px;
   font-size: 13px;
@@ -406,13 +420,13 @@ a {
   margin-top: 13px;
   margin-left: 17px;
   margin-right: 17px;
+  margin-bottom: 18px;
   font-weight: 300;
   font-size: 14px;
   line-height: 17px;
   color: #5D5D5D;
 }
 .product__price {
-  margin-top: 18px;
   margin-left: 17px;
   margin-right: 17px;
   font-size: 16px;
@@ -552,7 +566,6 @@ a {
   color: #F16D7F;
   margin-bottom: 12px;
 }
-
 .collection__hr {
   width: 63px;
   height: 3px;
