--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,7 @@
       padding-left: 16px;
       text-transform: uppercase;
       border-left: 12px solid #F16D7F;
+      // мне показалось, что так удобнее сделать черточку с лева от текста да и кода занимает меньше  
       font-size: 32px;
         line-height: 38px;
       &_big {
@@ -143,8 +144,11 @@
     list-style-type: none;
     background-color: #F8F8F8;
     margin-bottom: 30px;
+    &__pic {
+      margin-bottom: 25px;
+    }
+    
     &__title {
-      margin-top: 25px;
       margin-left: 17px;
       margin-right: 17px;
       font-size: 13px;
@@ -156,13 +160,13 @@
       margin-top: 13px;
       margin-left: 17px;
       margin-right: 17px;
+      margin-bottom: 18px;
       font-weight: 300;
       font-size: 14px;
       line-height: 17px;
       color: #5D5D5D;
     }
     &__price {
-      margin-top: 18px;
       margin-left: 17px;
       margin-right: 17px;
       font-size: 16px;
