--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,7 @@
       padding-left: 16px;
       text-transform: uppercase;
       border-left: 12px solid #F16D7F;
+      // мне показалось, что так удобнее сделать черточку с лева от текста да и кода занимает меньше  
       font-size: 32px;
         line-height: 38px;
       &_big {
@@ -143,8 +144,41 @@
     list-style-type: none;
     background-color: #F8F8F8;
     margin-bottom: 30px;
+    position: relative;
+
+    &__pic {
+      margin-bottom: 25px;
+    }
+
+    &__add {
+      top: 0;
+      width: 360px;
+      height: 420px;
+      opacity: 0;
+      background-color: rgb(58, 57, 57);
+      position: absolute;
+    }
+
+    &__add_txt {
+      color: #FFFFFF;
+      border: 1px solid #FFFFFF;
+      padding: 14px;
+      display: flex;
+      margin: 0 auto;
+      margin-top: 170px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      width: 140px;
+      font-size: 14px;
+      line-height: 17px; 
+    }
+
+    &__add:hover {
+      opacity: 0.75;
+    }
+
     &__title {
-      margin-top: 25px;
       margin-left: 17px;
       margin-right: 17px;
       font-size: 13px;
@@ -156,13 +190,13 @@
       margin-top: 13px;
       margin-left: 17px;
       margin-right: 17px;
+      margin-bottom: 18px;
       font-weight: 300;
       font-size: 14px;
       line-height: 17px;
-      color: #5D5D5D;
+      color: #000000;
     }
     &__price {
-      margin-top: 18px;
       margin-left: 17px;
       margin-right: 17px;
       font-size: 16px;
@@ -182,6 +216,10 @@
       margin-bottom: 95px;
       display: flex;
       text-align: center;
+      &:hover {
+        color: white;
+        background-color: #F26376;
+      }
     }
   }
   
@@ -191,7 +229,7 @@
     margin-top: 50px;
     margin-bottom: 65px;
     display: flex;
-  justify-content: space-between;
+    justify-content: space-between;
   }
   .filter__btn {
     font-weight: 600;
@@ -263,10 +301,10 @@
   }
 
   .pagination__arrow_left {
-  text-decoration: none;
+    text-decoration: none;
   }  
   .pagination__arrow_right {
-  text-decoration: none;
+    text-decoration: none;
   }  
   .pagination__item {
     padding: 6px;
