Еще немного доработал сайт
Список изменений:
Нет наведения у иконок в шапке и иконка меню вставлена с помощью img, 
а надо в виде кода, чтобы можно было наведение сделать; 
Нет наведения на фото товара; внизу, в секции подписки как-то странно отцентрированы колонки; белого поля у поиска, по-моему, нет в макете. 
В шапке нет figure, иконки справа - это навигация.
Хлебным крошкам надо задать hover; в каталоге нет наведения и ссылки на товар. 
На странице товара выровнять внутри кнопки "в корзину" иконку и надпись; 
Нет наведения на товары; 
Убежала девушка с отзывом.
На странице корзины нет ссылок на страницу товаров, 
Нет наведения на кнопки, 
На странице регистрации нет самой страницы, вместо нее каталог.
Добавить основные части сайта в тег main.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,16 +8,12 @@
     padding: 18px 0;
   }
   
-  .logo {
+  .logo, .header__contact, .header__menu {
     margin-right: 33px;
   }
   
   .header__menu {
-    margin-right: 33px;
     background-color: #222222;
-  }
-  .header__contact {
-    margin-right: 33px;
   }
 
   .header__items {
@@ -26,19 +22,21 @@
     align-items: center;
   }
 
+  .header__item__form {
+    display: flex;
+    align-items: center;
+  }
+
   .search {
     position: relative;
   }
 
-  .search__input {
-    margin-top: 4px;
+    .search__input {
     margin-left: 15px;
     padding: 3px;
-    max-height: 29px;
     max-width: 150px;
     color: white;
     background-color: #222222;
-    position: absolute;
     border: 1px solid white;
     border-radius: 10px;
     opacity: 0;
