Добавил адаптив к главной странице
Добавил адаптив к главной странице

--- a/scss/_advantage.scss
+++ b/scss/_advantage.scss
@@ -5,6 +5,7 @@
   
   .advantage__wrap {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
   }
